[gd_scene load_steps=28 format=2]

[ext_resource path="res://RattoBox0.6VersionNewest.png" type="Texture" id=1]
[ext_resource path="res://sprites/MeatMan.png" type="Texture" id=2]
[ext_resource path="res://sprites/OptionsButton.png" type="Texture" id=3]
[ext_resource path="res://sprites/OptionsButtonSelected.png" type="Texture" id=4]
[ext_resource path="res://sprites/PlayButton.png" type="Texture" id=5]
[ext_resource path="res://sprites/PlayButtonSelected.png" type="Texture" id=6]
[ext_resource path="res://scenes/UIs/OptionsNew.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/ModsButton.png" type="Texture" id=8]
[ext_resource path="res://scripts/MainMenuNew.gd" type="Script" id=9]
[ext_resource path="res://sounds/songs/tomp3.cc - Flood Escape 2 OST Lobby 2020 Version.mp3" type="AudioStream" id=10]
[ext_resource path="res://sounds/y2mate.com - Rat Sounds Effect.mp3" type="AudioStream" id=11]
[ext_resource path="res://sounds/hover.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/select.wav" type="AudioStream" id=13]
[ext_resource path="res://LoadingScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://sprites/MAINMENU-foreground.png" type="Texture" id=15]
[ext_resource path="res://sprites/MAINMENU-background.png" type="Texture" id=16]
[ext_resource path="res://sprites/MAINMENU-sky.png" type="Texture" id=17]
[ext_resource path="res://sprites/MAINMENU-mountain.png" type="Texture" id=18]
[ext_resource path="res://scripts/Camera2D.gd" type="Script" id=19]
[ext_resource path="res://MinecraftFive-Bold.ttf" type="DynamicFontData" id=20]
[ext_resource path="res://scenes/UIs/MapSelectionNew.tscn" type="PackedScene" id=21]
[ext_resource path="res://sprites/ModsButtonSelected.png" type="Texture" id=22]

[sub_resource type="Animation" id=5]
resource_name = "OptionsButton"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Options/Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.380392 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Options/Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 0.996048, 0.991453 ), Vector2( 1.196, 1.191 ), Vector2( 1.496, 1.491 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Options:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "PlayButton"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Play:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Play/Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.380392 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Play/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.8 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 1.011 ), Vector2( 1.2, 1.211 ), Vector2( 1.5, 1.511 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Play:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Play/Sprite:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Play/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Options/Sprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Options/Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.996048, 0.991453 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Options:rect_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "TitleBob"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RattoBoxTitlebut3d:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 211, 72 ), Vector2( 211, 62 ) ]
}

[sub_resource type="DynamicFont" id=4]
size = 15
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 20 )

[node name="MainMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_lock_": true
}

[node name="Tween" type="Tween" parent="."]

[node name="Hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -20.8

[node name="MainMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -14.0

[node name="rat squeaking" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -20.8

[node name="Decor" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Sky" type="ColorRect" parent="Decor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -402.0
margin_top = -804.0
margin_right = 402.0
margin_bottom = 228.0
mouse_filter = 2
color = Color( 0.266667, 0.647059, 0.984314, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Grass" type="ColorRect" parent="Decor"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -514.0
margin_top = 444.0
margin_right = 514.0
margin_bottom = 686.0
mouse_filter = 2
color = Color( 0.286275, 0.796078, 0.521569, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MeatMan" type="Sprite" parent="Decor"]
visible = false
position = Vector2( 862, 161 )
rotation = -0.261799
scale = Vector2( 0.345, 0.345 )
texture = ExtResource( 2 )

[node name="SKY" type="Sprite" parent="Decor"]
visible = false
position = Vector2( 500, 100 )
texture = ExtResource( 17 )

[node name="MOUNTAINS" type="Sprite" parent="Decor"]
position = Vector2( 500, 700 )
texture = ExtResource( 18 )

[node name="BG" type="Sprite" parent="Decor"]
position = Vector2( 500, 700 )
texture = ExtResource( 16 )

[node name="FG" type="Sprite" parent="Decor"]
position = Vector2( 500, 700 )
texture = ExtResource( 15 )

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Main"]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -438.0
margin_top = -1255.0
margin_right = 495.0
margin_bottom = 1256.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.317647 )

[node name="RattoBoxTitlebut3d" type="TextureRect" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -301.0
margin_top = 72.0
margin_right = 302.0
margin_bottom = 277.999
texture = ExtResource( 1 )
expand = true

[node name="Play" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -80.0
margin_top = 300.0
margin_right = 80.0
margin_bottom = 345.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 80, 22.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Main/Play"]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 76, 19.2278 )
texture = ExtResource( 6 )

[node name="Options" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -130.5
margin_top = 390.0
margin_right = 130.5
margin_bottom = 435.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 130.5, 22.5 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="Sprite" type="Sprite" parent="Main/Options"]
self_modulate = Color( 1, 1, 1, 0 )
show_behind_parent = true
position = Vector2( 126.331, 19.9957 )
scale = Vector2( 0.996048, 0.991453 )
texture = ExtResource( 4 )

[node name="ButtonClickAnimation" type="AnimationPlayer" parent="Main"]
playback_speed = 2.0
anims/OptionsButton = SubResource( 5 )
anims/PlayButton = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Titlebob" type="AnimationPlayer" parent="Main"]
autoplay = "TitleBob"
anims/TitleBob = SubResource( 3 )

[node name="Mods" type="TextureButton" parent="Main"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -84.0
margin_top = 473.0
margin_right = 67.0
margin_bottom = 513.0
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 75.5, 20 )
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 22 )

[node name="Options" parent="." instance=ExtResource( 7 )]
margin_top = 600.0
margin_bottom = 600.0

[node name="MapSelectionNew" parent="." instance=ExtResource( 21 )]
margin_top = -609.0
margin_bottom = -609.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
script = ExtResource( 19 )

[node name="LoadingScreen" parent="Camera2D" instance=ExtResource( 14 )]
visible = false

[node name="Version" type="CanvasLayer" parent="."]
layer = 2

[node name="VersionLabel" type="Label" parent="Version"]
self_modulate = Color( 1, 1, 1, 0.164706 )
margin_left = 8.0
margin_top = 571.0
margin_right = 199.0
margin_bottom = 601.0
custom_fonts/font = SubResource( 4 )
text = "kill yoruself"

[connection signal="button_up" from="Main/Play" to="." method="_on_Play_button_up"]
[connection signal="mouse_entered" from="Main/Play" to="." method="_on_Play_mouse_entered"]
[connection signal="mouse_exited" from="Main/Play" to="." method="_on_mouse_exited"]
[connection signal="button_up" from="Main/Options" to="." method="_on_Options_button_up"]
[connection signal="mouse_entered" from="Main/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="Main/Options" to="." method="_on_mouse_exited"]
